fix text content overflow

--- a/frontend/styles/components/_steps.scss
+++ b/frontend/styles/components/_steps.scss
@@ -51,7 +51,7 @@
     }
 
     &__text__content {
-      text-overflow: hidden;
+      overflow: hidden;
     }
     @media (min-width: 980px) {
       &::after {
